// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders as checked 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 4rem;
  height: 2rem;
}

.c1 {
  opacity: 0;
  width: 0;
  height: 0;
}

.c1:checked + .slider {
  background-color: #0CD664;
}

.c1:checked + .slider:before {
  background-color: #FFF;
  -webkit-transform: translateX(32px);
  -ms-transform: translateX(32px);
  transform: translateX(32px);
}

.c2 {
  position: absolute;
  width: 4rem;
  height: 2rem;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  cursor: pointer;
  background-color: #31373F;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 2.125rem;
}

.c2::before {
  position: absolute;
  content: "";
  height: 1.5rem;
  width: 1.5rem;
  left: 0.25rem;
  bottom: 0.25rem;
  background-color: #8697A2;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 50%;
}

<label
  className="c0"
>
  <input
    checked={true}
    className="c1"
    type="checkbox"
  />
  <span
    className="c2 slider"
  />
</label>
`;

exports[`Switch renders by default 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 4rem;
  height: 2rem;
}

.c1 {
  opacity: 0;
  width: 0;
  height: 0;
}

.c1:checked + .slider {
  background-color: #0CD664;
}

.c1:checked + .slider:before {
  background-color: #FFF;
  -webkit-transform: translateX(32px);
  -ms-transform: translateX(32px);
  transform: translateX(32px);
}

.c2 {
  position: absolute;
  width: 4rem;
  height: 2rem;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  cursor: pointer;
  background-color: #31373F;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 2.125rem;
}

.c2::before {
  position: absolute;
  content: "";
  height: 1.5rem;
  width: 1.5rem;
  left: 0.25rem;
  bottom: 0.25rem;
  background-color: #8697A2;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  border-radius: 50%;
}

<label
  className="c0"
>
  <input
    className="c1"
    type="checkbox"
  />
  <span
    className="c2 slider"
  />
</label>
`;
